# Micro-Sniper

./: .env.example  Dockerfile  README.md  app.py  main.py  pyproject.toml
.claude/skills/code-generator/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
adapters/: __init__.py
adapters/ezlink/: image.py
adapters/qywechat/: broadcast.py  callback.py  media.py  message.py  token.py
api/routes/: callback.py  connectors.py  identity.py  image.py  monitor.py  sniper.py
api/schema/: agent.py  base.py  connectors.py  identity.py  image.py  response.py
config/: settings.py
middleware/: __init__.py  auth.py  exception_handler.py  request_context.py  task_timeout.py
models/: __init__.py  config.py  connectors.py  identity.py  task.py
scripts/: init_monitor_tables.py
scripts/agent/: xhs_trend_analyzer.py
scripts/sniper/: xhs_creator.py  xhs_trend.py
services/: config_service.py  connector_service.py  identity_service.py  image_service.py  monitor_service.py  task_service.py
services/connectors/: __init__.py  base.py  connector_service.py  generic.py  session.py  wechat.py  xiaohongshu.py
services/sniper/: douyin_trend.py  xhs_creator.py  xhs_trend.py
services/sniper/agent/: base_agent.py  douyin_trend.py  wechat_analyze.py  wechat_harvest.py  xhs_creator.py  xhs_trend.py
services/sniper/connectors/: README.md  __init__.py  base.py  connector_service.py  douyin.py  wechat.py  xiaohongshu.py
static/: README.md  index.html
static/js/: app.js  auth_functions_final.js  auth_functions_new.js
utils/: cache.py  exceptions.py  logger.py  oss.py
(+17 files in other folders)
